# whisper-rs

./: .gitignore  .gitmodules  BEFORE_TASK_3_1_1.md  Cargo.toml  README.md  TASK_FOR_WHISPER_RS_DEV.md  build-and-install.sh  build.rs
examples/: basic_use.rs  test_callback_crash.rs  test_callback_safety.rs  test_memory_leak.rs  test_tokenize_bug.rs  test_tokenize_safety.rs  test_vad_memory_leak.rs  whsh.rs
src/: error.rs  lib.rs  utilities.rs  whisper_ctx.rs  whisper_ctx_wrapper.rs  whisper_params.rs  whisper_vad.rs
src/whisper_state/: mod.rs  segment.rs  token.rs
sys/: Cargo.toml  build.rs  wrapper.h
sys/src/: bindings.rs
tests/: test_forced_tokens_lifetime.rs  test_lifetime_issue.rs  test_thread_safety.rs
