[package]
name = "whisper-rs-sys"
version = "0.14.1"
edition = "2021"
description = "Rust bindings for whisper.cpp (FFI bindings)"
license = "Unlicense"
documentation = "https://docs.rs/whisper-rs-sys"
repository = "https://codeberg.org/tazz4843/whisper-rs"
links = "whisper"
include = [
	"src/*.rs",
	"build.rs",
	"wrapper.h",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
coreml = []
cuda = []
hipblas = []
openblas = []
metal = []
vulkan = []
force-debug = []
openmp = []
intel-sycl = []

[build-dependencies]
bindgen = "0.71"
